--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,14 @@ header::before {
   align-items: center;
   justify-content: center;
   font-size: 60px;
+  overflow: hidden;
+}
+
+.profile-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 h1 {
